Made email template more simplistic for use on mobile devices like iphone

--- a/usr/share/flask/app/templates/email.html
+++ b/usr/share/flask/app/templates/email.html
@@ -1,6 +1,7 @@
-{% extends "base.html" %}
+<html>
+<head></head>
 
-{% block content %}
+<body>
         <div class="col-sm-12 col-md-12 main">
             <p>
                 <strong>Severity:</strong> {{ ainfo.severity }} <br />
@@ -15,5 +16,5 @@
                 {{ results_table|safe }}
             <p>
         </div>
-{% endblock %} 
-
+</body>
+</html>
