--- a/usr/share/flask/app/templates/main.html
+++ b/usr/share/flask/app/templates/main.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% include "navbar.html" %}
-<!-- removed include "left-sidebar.html" -->
 
 {% block content %}
 
@@ -12,3 +11,4 @@
             {% block right_sidebar %}{% endblock %}
         </div>
 {% endblock %}
+{% include "footer_js.html" %}
