--- a/usr/share/flask/app/templates/base.html
+++ b/usr/share/flask/app/templates/base.html
@@ -1,43 +1,49 @@
 {% include "flashes.html" %}
 <html lang="en">
-  <head>
+
+<head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>QA Manager</title>
+    <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="/static/css/dashboard.css" rel="stylesheet">
-    <!-- FontAwesome -->
-    <!-- <link href="/static/css/font-awesome.css" rel="stylesheet"> -->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <!-- Our Custom CSS -->
-    <link href="/static/css/style.css" rel="stylesheet">
-    <!-- Boostrap datatables -->
-    <link href="/static/css/dataTables.bootstrap.css" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- MetisMenu CSS -->
+    <link href="/static/css/plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/static/js/custom.js"></script>
+    <!-- Timeline CSS -->
+    <link href="/static/css/plugins/timeline.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="/static/css/sb-admin-2.css" rel="stylesheet">
+
+    <!-- Morris Charts CSS -->
+    <link href="/static/css/plugins/morris.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="/static/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
     <!-- DataTables -->
-    <script type="text/javascript" src="/static/js/jquery.dataTables.js"></script>
-    <!--<script type="text/javascript" src="//cdn.datatables.net/plug-ins/28e7751dbec/integration/bootstrap/3/dataTables.bootstrap.js"></script>-->
-    <script type="text/javascript" src="/static/js/jquery.timeago.js"></script>
+    <link href="/static/css/plugins/dataTables.bootstrap.css" rel="stylesheet" type="text/css">
 
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-  </head>
-
+</head>
   <body>
 
     {% block flashes %}{% endblock %}
     {% block content %}{% endblock %}
-
 
   </body>
 </html>
