--- a/usr/share/flask/app/templates/login.html
+++ b/usr/share/flask/app/templates/login.html
@@ -1,107 +1,82 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
+<head>
 
-<style type="text/css">
-  body {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: #f5f5f5;
-  }
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  .form-signin {
-    max-width: 300px;
-    padding: 19px 29px 29px;
-    margin: 0 auto 20px;
-    background-color: #fff;
-    border: 1px solid #e5e5e5;
-    -webkit-border-radius: 5px;
-       -moz-border-radius: 5px;
-            border-radius: 5px;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-       -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-            box-shadow: 0 1px 2px rgba(0,0,0,.05);
-  }
-  .form-signin .form-signin-heading {
-    margin-top: 20px;
-    font-size: 16px;
-    line-height: normal;
-    margin-bottom: 0px;
-  }
-  .form-signin .form-signin-heading small {
-      font-size: 12px;
-    }
-  .form-signin input[type="text"],
-  .form-signin input[type="password"] {
-    font-size: 16px;
-    height: auto;
-    margin-bottom: 15px;
-    padding: 7px 9px;
-  }
-</style>
-<script type="text/javascript" charset="utf-8">
-    $('#login_form').submit(function(event)
-    {
-        event.preventDefault();
-        var self = this;
+    <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
-        function showFormError(msg)
-        {
-            $(self).find('input[type="submit"]').button('reset');
-            $('#login_form_errors').html(msg).show();
-        }
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-        function hideFormErrors()
-        {
-            $('#login_form_errors').hide();
-            $('#login_form .error').removeClass('error');
-        }
+    <!-- MetisMenu CSS -->
+    <link href="css/plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
 
-        hideFormErrors();
+    <!-- Custom CSS -->
+    <link href="css/sb-admin-2.css" rel="stylesheet">
 
-        if (!$('#username').val().length)
-        {
-            $('#username').focus().parent('.control-group').addClass('error');
-            showFormError('Please enter your username.');
-            return;
-        }
+    <!-- Custom Fonts -->
+    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-        if (!$('#passwd').val().length)
-        {
-            $('#passwd').focus().parent('.control-group').addClass('error');
-            showFormError('Please enter your password.');
-            return;
-        }
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-        App.onFailure = function()
-        {
-            showFormError('The username or password you entered is incorrect.');
-        };
+</head>
 
-        $(this).find('input[type="submit"]').button('loading');
+<body>
 
-        App.send(this);
-    });
-</script>
-
-<form class="form-signin" id="login_form" action="/login" method="POST">
-    <input id="do" name="do" value="login" type="hidden" />
-    <div class="text-center">
-        <img src="/static/img/logo.png" alt="Shape Up" width="140" height="30" />
-        <h2 class="form-signin-heading">QA Manager<span class="muted"><small>    v0.5 beta</small></span></h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Please Sign In</h3>
+                    </div>
+                    <div class="panel-body">
+                        <form role="form">
+                            <fieldset>
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                                    </label>
+                                </div>
+                                <!-- Change this to a button or input when using this as a form -->
+                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <hr />
 
-    <div class="form-group">
-        <input name="username" id="username" value="" type="text" class="input-block-level form-control" placeholder="Username">
-    </div>
-    <div class="form-group">
-        <input name="password" id="passwd" type="password" class="input-block-level form-control" placeholder="Password" autocomplete="off">
-    </div>
-    <input class="btn btn-large btn-primary btn-block" type="submit" value="Login" data-loading-text="Logging in..." />
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
-</form>
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="js/plugins/metisMenu/metisMenu.min.js"></script>
 
+    <!-- Custom Theme JavaScript -->
+    <script src="js/sb-admin-2.js"></script>
 
-{% endblock %}
+</body>
+
+</html>
